--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="referrer" content="never">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-
+<!--    <link type="text/css" rel="stylesheet" href="src/normalize.css">-->
     <!--    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no,minimal-ui">-->
     <title>今日热点</title>
     <link rel="shortcut icon" href="static/favicon.ico">
@@ -13,6 +13,10 @@
         margin: 0;
         padding: 0;
         list-style: none;
+      }
+      body{
+        line-height: 1.5;
+        font-family: Arial, Helvetica;
 
       }
     </style>
