--- a/index.html
+++ b/index.html
@@ -19,9 +19,38 @@
         font-family: Arial, Helvetica;
 
       }
+      #loading{
+        width: 100%;
+        height: 21.6rem;
+        background-image: url("static/start.png");
+        background-size: cover;
+
+      }
+      .circle{
+        position: absolute;
+        bottom: 1.067rem;
+      }
+      .circle div{
+        width: 0.267rem;
+        height: 0.267rem;
+        border-radius: 50%;
+        background-color: white;
+        float: left;
+        margin-left: 0.133rem;
+      }
     </style>
   </head>
   <body>
+    <div id="loading" style="display: block">
+<!--      <div class="circle">-->
+<!--      <div></div>-->
+<!--      <div></div>-->
+<!--      <div></div>-->
+<!--      <div></div>-->
+<!--      </div>-->
+    </div>
+    <div id="main" style="display: none">
     <div id="app"></div>
+    </div>
   </body>
 </html>
